--- a/src/global.scss
+++ b/src/global.scss
@@ -56,7 +56,7 @@ ion-item-divider:last-of-type{
   display:none;
 }
 app-tabs ion-tab-button {
-  --color-selected: var(--secondary-color);
+  --color-selected: var(--primary-color);
 }
 
 .no-scroll {
